--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,19 +11,46 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
+    def recyclerview_version = '1.1.0'
+    def material_version = '1.0.0'
+    def glide_version = '4.11.0'
+    def gson_version = '2.8.6'
+    def retrofit_version = '2.6.2'
+    def butterknife_version = '10.2.1'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+    implementation "com.google.android.material:material:$material_version"
+    // bumptech - https://github.com/bumptech/glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    // gson - https://github.com/google/gson
+    implementation "com.google.code.gson:gson:$gson_version"
+    // retrofit - https://github.com/square/retrofit
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    // butterknife - https://github.com/JakeWharton/butterknife
+    implementation "com.jakewharton:butterknife:$butterknife_version"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butterknife_version"
+
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 }
