--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     def gson_version = '2.8.6'
     def retrofit_version = '2.6.2'
     def butterknife_version = '10.2.1'
+    def jsoup_version = '1.13.1'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.2'
@@ -48,6 +49,8 @@ dependencies {
     // butterknife - https://github.com/JakeWharton/butterknife
     implementation "com.jakewharton:butterknife:$butterknife_version"
     annotationProcessor "com.jakewharton:butterknife-compiler:$butterknife_version"
+    // jsoup - https://jsoup.org/
+    implementation "org.jsoup:jsoup:$jsoup_version"
 
     testImplementation 'junit:junit:4.12'
 
