--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <!-- FIXME Android-P 부터 네트워크 보안 강화로 인해 http에 대한 트래픽을 안드로이드에서 막고 있어서
+          별도로 network_security_config를 통해 허용해주었다고 설명함. -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,6 +14,9 @@
         android:supportsRtl="true"
         android:networkSecurityConfig="@xml/network_security_config"
         android:theme="@style/AppTheme">
+        <!-- FIXME 가로/세로 전환 시에 액티비티가 죽었다가 onCreate부터 다시 불리는데 configChanges 옵션을 통해 가로/세로 전환 시에도 onCreate 안타도록 했다고 말함. -->
+        <!--  그럼 혹시 외장 키보드에 대한 입력이나 이런 걸 막기 위한 처리도 했냐고 물어봄
+               그런 방어는 하지 않았다고 말함. -->
         <activity android:name=".MainActivity"
             android:configChanges="screenSize|orientation">
             <intent-filter>
